# rust-plan

./: Cargo.toml  db  db-count
bb-1/: Cargo.toml
bb-1/src/: main.rs
bb-2/: Cargo.toml
bb-2/src/: main.rs
bb-3/: Cargo.toml
bb-3/src/: lib.rs
project-1/: Cargo.toml
project-2/src/: lib.rs
project-3/: Cargo.toml
project-3/src/: lib.rs
project-4/: Cargo.toml
project-4/src/: lib.rs
project-4/src/thread_pool/: mod.rs  naive.rs  rayon.rs  shared_queue.rs
