[package]
name = "kvs"
version = "0.1.0"
authors = ["Yilin Chen <sticnarf@gmail.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
clap = "2.33.0"
structopt = "0.2.15"
failure = "0.1.5"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
log = "0.4.8"
env_logger = "0.7.1"
sled = "0.29.1"
crossbeam = "0.7.3"
rayon = "1.0.3"
num_cpus = "1.10.0"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
crossbeam-utils = "0.6.5"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
panic-control = "0.1.4"
